--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,25 @@
 Spring:
+  #配置数据源
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://d9city.net:8309/mybatisplus?characterEncoding=utf-8&useSSL=false   # mysql 5
-    #url: jdbc:mysql://d9city.net:8309/mybatisplus?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false  mysql 8
-    username: root
-    password: jimy3k0519
+    dynamic:
+      #设置默认的数据源或者数据源组，默认值即为master
+      primary: master
+      #严格匹配数据源，默认false，true未匹配到指定数据源时抛异常，false使用默认数据源
+      strict: false
+      datasource:
+        master:
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://d9city.net:8309/mybatisplus?characterEncoding=utf-8&useSSL=false   # mysql 5
+          #url: jdbc:mysql://d9city.net:8309/mybatisplus?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false  mysql 8
+          username: root
+          password: jimy3k0519
+        slave:
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://d9city.net:8310/mybatisplus?characterEncoding=utf-8&useSSL=false   # mysql 5
+          #url: jdbc:mysql://d9city.net:8309/mybatisplus?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false  mysql 8
+          username: root
+          password: jimy3k0519
 
 mybatis-plus:
   configuration:
@@ -14,5 +28,8 @@ mybatis-plus:
   global-config:
     db-config:
       table-prefix: t_        #设置实体类对应表名的统一前缀：t_
+      id-type: auto
   # 配置类型别名所对应的包  mapper中 *Mapper.xml 使用类型别名，会用到。
   type-aliases-package: com.nicole.springbootmybatisplusdemo.pojo
+  # 配置扫描通用枚举的包  当代码中使用到枚举类型，会扫描该包路径下所有枚举类型定义
+  type-enums-package: com.nicole.springbootmybatisplusdemo.enums
